[gd_scene load_steps=3 format=2]

[ext_resource path="res://core/rewind/PlayerRewindController.gd" type="Script" id=1]
[ext_resource path="res://debug/simple_debug/SimpleDebug.tscn" type="PackedScene" id=2]

[node name="PlayerRewindController" type="Node2D"]
script = ExtResource( 1 )

[node name="SimpleDebug" parent="." instance=ExtResource( 2 )]
run = true

[node name="RewindTimer" type="Timer" parent="."]
one_shot = true
